--- a/06/ex00/Makefile
+++ b/06/ex00/Makefile
@@ -1,15 +1,10 @@
 SRCS = main.cpp \
-		Bureaucrat.cpp \
-		AForm.cpp \
-		ShrubberyCreationForm.cpp \
-		RobotomyRequestForm.cpp \
-		PresidentialPardonForm.cpp \
-		Intern.cpp \
+		ScalarConverter.cpp \
 
 FLAGS = -Werror -Wall -Wextra -std=c++98 -Wshadow -g -fsanitize=address
 CC = c++
 RM = rm -rf
-NAME = Intern
+NAME = ScalarConverter
 
 all: $(NAME)
 
